# lejf

./: LICENSE  README.md  Todo.md  lejf.cabal  stack.yaml
src/: Evaluate.hs  Main.hs  Types.hs  Utils.hs
src/Evaluate/: Error.hs  Eval.hs
src/Syntax/: Common.hs  Concrete.hs  Decl.hs  Internal.hs  Pretty.hs  Subst.hs
src/Types/: Collect.hs  Equality.hs  Errors.hs  Evaluate.hs  Rules.hs  TC.hs  Utils.hs
