name:                lejf
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/danten/lejf#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable lejf
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , aeson
                     , monad-logger
                     , monad-par
                     , mtl
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , servant
                     , servant-server
                     , string-conversions
                     , text
                     , transformers
                     , vector
                     , wai
                     , warp
  default-language:    Haskell2010

test-suite lejf-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lejf
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/danten/lejf
